hphp/test/slow/parser/unset_class_constant_on_instance.php.expectf
Fatal error: You cannot use this syntax in an `unset()` expression. in %s/unset_class_constant_on_instance.php on line 11